WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129793
Fix the !ENABLE(CSS_STICKY_POSITION) build
https://bugs.webkit.org/show_bug.cgi?id=129793
Summary
Fix the !ENABLE(CSS_STICKY_POSITION) build
Zsolt Borbely
Reported
2014-03-06 02:13:17 PST
tested on
r165180
: $ Tools/Scripts/build-webkit --efl --no-css-sticky-position ... /home/bzsolt/webkit/EflWebKit/Source/WebCore/editing/EditingStyle.cpp: In member function 'bool WebCore::EditingStyle::convertPositionStyle()': /home/bzsolt/webkit/EflWebKit/Source/WebCore/editing/EditingStyle.cpp:1207:77: error: 'CSSValueWebkitSticky' was not declared in this scope ...
Attachments
Proposed patch
(1.75 KB, patch)
2014-03-06 02:16 PST
,
Zsolt Borbely
no flags
Details
Formatted Diff
Diff
Proposed patch
(1.79 KB, patch)
2014-03-06 07:07 PST
,
Zsolt Borbely
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zsolt Borbely
Comment 1
2014-03-06 02:16:22 PST
Created
attachment 225972
[details]
Proposed patch
Csaba Osztrogonác
Comment 2
2014-03-06 03:16:56 PST
It isn't related to EFL, you will get same build failure on all ports if you try to disable CSS Sticky Position.
Csaba Osztrogonác
Comment 3
2014-03-06 06:56:18 PST
cc-ing Myles and Simon, the author and the reviewer of -
https://trac.webkit.org/changeset/163916
-
https://trac.webkit.org/changeset/164299
Zsolt Borbely
Comment 4
2014-03-06 07:07:43 PST
Created
attachment 225988
[details]
Proposed patch
Simon Fraser (smfr)
Comment 5
2014-03-06 10:28:14 PST
Comment on
attachment 225988
[details]
Proposed patch Why does EFL not want sticky enabled?
Csaba Osztrogonác
Comment 6
2014-03-06 10:31:44 PST
(In reply to
comment #5
)
> (From update of
attachment 225988
[details]
) > Why does EFL not want sticky enabled?
It is enabled by default on EFL, but the guard should work properly.
WebKit Commit Bot
Comment 7
2014-03-06 11:00:42 PST
Comment on
attachment 225988
[details]
Proposed patch Clearing flags on attachment: 225988 Committed
r165198
: <
http://trac.webkit.org/changeset/165198
>
WebKit Commit Bot
Comment 8
2014-03-06 11:00:46 PST
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 9
2014-03-06 11:25:45 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (From update of
attachment 225988
[details]
[details]) > > Why does EFL not want sticky enabled? > > It is enabled by default on EFL, but the guard should work properly.
It's a small feature that everyone has enabled (as far as I know); maybe we should get rid of the guard?
Myles C. Maxfield
Comment 10
2014-03-06 14:01:02 PST
Thanks for fixing this. It was my fault.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug