Fix the !ENABLE(CSS_STICKY_POSITION) build https://bugs.webkit.org/show_bug.cgi?id=129793

Patch by Zsolt Borbely <borbezs@inf.u-szeged.hu> on 2014-03-06
Reviewed by Simon Fraser.

Add missing ENABLE(CSS_STICKY_POSITION) guard to EditingStyle::convertPositionStyle().

* editing/EditingStyle.cpp:
(WebCore::EditingStyle::convertPositionStyle):

Canonical link: https://commits.webkit.org/147841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165198 268f45cc-cd09-0410-ab3c-d52691b4dbfc